--- a/logs.html
+++ b/logs.html
@@ -4,17 +4,11 @@
 <meta charset="UTF-8">
 <title>Live Global Opens</title>
 
-<script
-  src="https://cdn.counter.dev/script.js"
-  data-id="bdad96f3-e256-4fb1-8bee-da58d4c7d280"
-  data-utcoffset="-6">
-</script>
-
 <style>
 #globalCounter{
-  margin-top:20px;
+  margin:20px;
   padding:14px 18px;
-  background:#0f0f10;
+  background:#000;
   color:#fff;
   border-radius:10px;
   font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto;
@@ -32,8 +26,15 @@
 
 <div id="globalCounter">
   Global page opens:
-  <span id="counter"></span>
+  <span id="counter">…</span>
 </div>
+
+<!-- ✅ TRACKER MUST BE AFTER THE SPAN -->
+<script
+  src="https://cdn.counter.dev/script.js"
+  data-id="bdad96f3-e256-4fb1-8bee-da58d4c7d280"
+  data-utcoffset="-6">
+</script>
 
 </body>
 </html>
