--- a/logs.html
+++ b/logs.html
@@ -3,25 +3,23 @@
 <head>
 <meta charset="UTF-8">
 <title>Live Global Opens</title>
-
 <style>
-#globalCounter{
-  margin:20px;
-  padding:14px 18px;
-  background:#000;
-  color:#fff;
-  border-radius:10px;
-  font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto;
-  font-size:16px;
-  display:inline-block;
-}
-#num{
-  font-weight:700;
-  font-size:18px;
-}
+  #globalCounter {
+    margin: 20px;
+    padding: 14px 18px;
+    background: #000;
+    color: #fff;
+    border-radius: 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+    font-size: 16px;
+    display: inline-block;
+  }
+  #num {
+    font-weight: 700;
+    font-size: 18px;
+  }
 </style>
 </head>
-
 <body>
 
 <div id="globalCounter">
@@ -30,42 +28,13 @@
 </div>
 
 <!-- Counter.dev loader -->
-<script
-  src="https://cdn.counter.dev/script.js"
-  data-id="bdad96f3-e256-4fb1-8bee-da58d4c7d280"
-  data-utcoffset="-6">
+<script src="https://cdn.counter.dev/script.js"
+        data-id="bdad96f3-e256-4fb1-8bee-da58d4c7d280"
+        data-utcoffset="-6">
 </script>
 
-<script>
-(function(){
-  let last=0;
-  const el=document.getElementById("num");
-
-  const obs=new MutationObserver(()=>{
-    const real=document.getElementById("counter");
-    if(!real) return;
-    const target=parseInt(real.textContent,10);
-    if(isNaN(target)) return;
-
-    obs.disconnect();
-    let cur=0;
-    const step=Math.max(1,Math.floor(target/60));
-    const t=setInterval(()=>{
-      cur+=step;
-      if(cur>=target){
-        cur=target;
-        clearInterval(t);
-      }
-      el.textContent=cur;
-    },16);
-  });
-
-  obs.observe(document.body,{childList:true,subtree:true});
-})();
-</script>
-
-<!-- hidden real counter -->
-<span id="counter" style="display:none"></span>
+<!-- Our JS file -->
+<script src="counter-animate.js"></script>
 
 </body>
 </html>
