--- a/logs.html
+++ b/logs.html
@@ -2,39 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Live Global Opens</title>
-<style>
-  #globalCounter {
-    margin: 20px;
-    padding: 14px 18px;
-    background: #000;
-    color: #fff;
-    border-radius: 10px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
-    font-size: 16px;
-    display: inline-block;
-  }
-  #num {
-    font-weight: 700;
-    font-size: 18px;
-  }
-</style>
+<title>Global Opens</title>
 </head>
 <body>
 
-<div id="globalCounter">
-  Global page opens:
-  <span id="num">0</span>
-</div>
+Global page opens: <span id="num">0</span>
 
-<!-- Counter.dev loader -->
-<script src="https://cdn.counter.dev/script.js"
-        data-id="bdad96f3-e256-4fb1-8bee-da58d4c7d280"
-        data-utcoffset="-6">
-</script>
-
-<!-- Our JS file -->
-<script src="counter-animate.js"></script>
-
+<script src="counter.js"></script>
 </body>
 </html>
