--- a/jjk.html
+++ b/jjk.html
@@ -47,7 +47,9 @@
     <button onclick="go('https://xen0nkidd.github.io/JjkEps/Ep2.html')">
       Episode 2
     </button>
-
+<button onclick="go('https://xen0nkidd.github.io/JjkEps/Ep3.html')">
+  Episode 3
+</button>
     <!-- Add more buttons like this -->
     <!--
     <button onclick="go('https://example.com')">
