--- a/test.html
+++ b/test.html
@@ -1371,7 +1371,8 @@ async function saveData() {
     alert("This might take a while, dont touch anything other than this OK button");
     reader.readAsText(file);
   }
-        function cloakIcon(url) {
+        // Change tab icon dynamically
+function cloakIcon(url) {
     const link = document.querySelector("link[rel~='icon']") || document.createElement("link");
     link.rel = "icon";
     if ((url + "").trim().length === 0) {
@@ -1382,6 +1383,7 @@ async function saveData() {
     document.head.appendChild(link);
 }
 
+// Change tab title dynamically
 function cloakName(string) {
     if ((string + "").trim().length === 0) {
         document.title = "gn-math";
@@ -1390,6 +1392,7 @@ function cloakName(string) {
     document.title = string;
 }
 
+// Open Tab Cloak settings
 function tabCloak() {
     const popupTitle = document.getElementById('popupTitle');
     const popupBody = document.getElementById('popupBody');
@@ -1407,6 +1410,7 @@ function tabCloak() {
     document.getElementById('popupOverlay').style.display = "flex";
 }
 
+// Open current page in a new blank tab with iframe
 function openAboutBlank() {
     const siteURL = window.location.href;
     const viewer = window.open("", "_blank");
@@ -1446,10 +1450,11 @@ function openAboutBlank() {
     viewer.document.close();
 }
 
-
+// Settings button image
 const settings = document.getElementById('settings');
 settings.innerHTML = '<img src="settings.png" alt="Settings" style="width:32px;height:32px;">';
 
+// Settings button click behavior
 settings.addEventListener('click', () => {
     document.getElementById('popupTitle').textContent = "Settings";
     const popupBody = document.getElementById('popupBody');
@@ -1462,6 +1467,7 @@ settings.addEventListener('click', () => {
 
     document.getElementById('popupOverlay').style.display = "flex";
 });
+
 
 
 
