--- a/bleh.html
+++ b/bleh.html
@@ -2,26 +2,30 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Video Player</title>
+<title>Fullscreen Video</title>
 <style>
-  body {
+  html, body {
     margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
     background: #000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    overflow: hidden;
   }
   video {
-    max-width: 100%;
-    max-height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 </style>
 </head>
 <body>
 
 <video controls autoplay>
-  <source src="https://drive.google.com/uc?export=download&id=1Anvt0DMIjmXO_z4e-4R3M9AvFpIO-6s8" type="video/mp4">
+  <source src="https://docs.google.com/uc?export=download&id=1Anvt0DMIjmXO_z4e-4R3M9AvFpIO-6s8" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
