Change title from 'Embedded MEGA Video' to 'Episode 3'

--- a/JjkEps/Ep3.html
+++ b/JjkEps/Ep3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Embedded MEGA Video</title>
+<title>Episode 3</title>
 <style>
   html, body {
     margin: 0;
