--- a/JjkEps/Ep1.html
+++ b/JjkEps/Ep1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Episode 1<title>
+<title>Episode 1</title>
 <style>
   html, body {
     margin: 0;
