Update iframe src to use embed link

--- a/JjkEps/Ep1.html
+++ b/JjkEps/Ep1.html
@@ -25,7 +25,7 @@
 <body>
 
 <iframe
-  src="https://mega.nz/file/vEtAQRIb#AbeVNhAARk8kwQc9iLBlRBBRo3Wh7zQUWcpRF0Jo8N0"
+  src="https://mega.nz/embed/vEtAQRIb#AbeVNhAARk8kwQc9iLBlRBBRo3Wh7zQUWcpRF0Jo8N0"
   allow="autoplay; fullscreen"
   allowfullscreen
 ></iframe>
