--- a/JjkSchoolVarient.html
+++ b/JjkSchoolVarient.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>JJK Season 3 Episodes</title>
+<title>JJK Season 3 Episodes In School</title>
 
 <style>
 .modal {
