--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@ _0xR&&_0xR[_0xa3('0x1')]();
                 <!-- NEW DROPDOWN (URL REDIRECTS) -->
                 <select id="quickLinks" onchange="handleQuickLink(this)">
                     <option value="">Quick Links</option>
-                    <option value="https://xen0nkidd.github.io/jjk.html">JJK Episodes</option>
+                    <option value="https://xen0nkidd.github.io/jjk.html">JJK Episodes (Adless)</option>
                     <option value="https://xen0nkidd.github.io/ai.html">Chatgpt</option>
-                  <option value="https://xen0nkidd.github.io/JjkSchoolVarient.html">JJK Episodes In School</option>
+                  <option value="https://xen0nkidd.github.io/JjkSchoolVarient.html">JJK Episodes In School (Ads)</option>
                 </select>
             </div>
 
@@ -231,6 +231,7 @@ _0xR&&_0xR[_0xa3('0x1')]();
     </script>
 </body>
 </html>
+
 
 
 
