Add button for Episode 4 in JjkSchoolVarient.html

--- a/JjkSchoolVarient.html
+++ b/JjkSchoolVarient.html
@@ -51,6 +51,9 @@
 <button onclick="go('https://xen0nkidd.github.io/JjkEpsSchool/Ep3.html')">
   Episode 3
 </button>
+    <button onclick="go('https://xen0nkidd.github.io/JjkEpsSchool/Ep4.html')">
+  Episode 4
+</button>
     <!-- Add more buttons like this -->
     <!--
     <button onclick="go('https://example.com')">
