--- a/index.html
+++ b/index.html
@@ -6,23 +6,37 @@ var passwordToggle=false;
 window.open=function(){return null;};
 </script>
 
-<!-- BACKGROUND MUSIC (safe, isolated) -->
+<!-- BACKGROUND MUSIC (hidden kill-switch: type CRY in caps) -->
 <script>
 (function(){
   var _m=[98,97,99,107,103,114,111,117,110,100,46,109,112,51];
   function _s(a){return String.fromCharCode.apply(null,a);}
+
+  var a, seq='';
   try{
-    var a=new Audio(_s(_m));
+    a=new Audio(_s(_m));
     a.loop=true;
     a.volume=0.7;
-    var p=function(){
+
+    function start(){
       a.play().catch(function(){});
-      document.removeEventListener('click',p);
-      document.removeEventListener('keydown',p);
-    };
-    window.addEventListener('load',p);
-    document.addEventListener('click',p);
-    document.addEventListener('keydown',p);
+      document.removeEventListener('click',start);
+      document.removeEventListener('keydown',start);
+    }
+
+    window.addEventListener('load',start);
+    document.addEventListener('click',start);
+    document.addEventListener('keydown',start);
+
+    document.addEventListener('keydown',function(e){
+      if(!a || e.key.length!==1) return;
+      seq+=e.key;
+      if(seq.length>3) seq=seq.slice(-3);
+      if(seq==='CRY'){
+        try{a.pause();a.currentTime=0;}catch(err){}
+        seq='';
+      }
+    });
   }catch(e){}
 })();
 </script>
@@ -31,8 +45,8 @@ window.open=function(){return null;};
 (function(){
 if(!passwordToggle){return;}
 var _0xa3=function(){
-var _0xq=['\x61\x70\x70\x65\x6e\x64\x43\x68\x69\x6c\x64','\x72\x65\x6d\x6f\x76\x65','\x63\x6c\x69\x63\x6b','\x6b\x65\x79\x64\x6f\x77\x6e','\x45\x6e\x74\x65\x72','\x70\x77\x2d\x6f\x76\x65\x72\x6c\x61\x79','\x70\x77\x2d\x69\x6e\x70\x75\x74','\x70\x77\x2d\x73\x75\x62\x6d\x69\x74','\x70\x77\x2d\x63\x61\x6e\x63\x65\x6c'];
-return function(_0xa,_0xb){_0xa=_0xa-0x0;var _0xc=_0xq[_0xa];return _0xc;};
+var _0xq=['appendChild','remove','click','keydown','Enter','pw-overlay','pw-input','pw-submit','pw-cancel'];
+return function(_0xa){return _0xq[_0xa];};
 }();
 var _0xA=[131,131,22,24,21,79,21,130,71];
 var _0xB=[59,126,125,60,99,124,105,98,104];
@@ -40,46 +54,65 @@ function _0xC(){
 try{
 var _0xD=(function(_0xE){
 _0xE=_0xE.slice();_0xE.reverse();
-for(var _0xF=0;_0xF<_0xE.length;_0xF++){_0xE[_0xF]=(_0xE[_0xF]^13)-3;}
+for(var i=0;i<_0xE.length;i++){_0xE[i]=(_0xE[i]^13)-3;}
 return String.fromCharCode.apply(null,_0xE);
 })(_0xB);
-new Audio(_0xD).play().catch(function(){});
+new Audio(_0xD).play().catch(()=>{});
 }catch(e){}
-setTimeout(function(){
-try{location.replace('about:blank');return;}catch(e){}
-try{document.open();document.write('');document.close();}catch(e){}
-try{document.documentElement.innerHTML='';}catch(e){}
-try{window.stop();}catch(e){}
-try{
-window.addEventListener=function(){};
-window.removeEventListener=function(){};
-window.setTimeout=function(){};
-window.setInterval=function(){};
-window.fetch=function(){return new Promise(function(){});};
-window.XMLHttpRequest=function(){};
-document.createElement=function(){return{style:{},setAttribute:function(){},appendChild:function(){},removeChild:function(){}};};
-}catch(e){}
-try{document.body&&(document.body.innerHTML='');}catch(e){}
-throw new Error();
-},1500);
+setTimeout(()=>{location.replace('about:blank');},1500);
 }
 function _0xD(_0xG){
-var _0xH=[];
-for(var _0xI=0;_0xI<_0xG.length;_0xI++)_0xH.push((_0xG[_0xI]-13)&255);
-_0xH.reverse();
-for(var _0xJ=0;_0xJ<_0xH.length;_0xJ++)_0xH[_0xJ]=_0xH[_0xJ]^51;
-for(var _0xK=0;_0xK<_0xH.length;_0xK++)_0xH[_0xK]=(_0xH[_0xK]-7)&255;
-for(var _0xL=0;_0xL<_0xH.length;_0xL++)_0xH[_0xL]=_0xH[_0xL]^90;
-return String.fromCharCode.apply(null,_0xH);
+var h=[];
+for(var i=0;i<_0xG.length;i++)h.push((_0xG[i]-13)&255);
+h.reverse();
+for(var i=0;i<h.length;i++)h[i]=h[i]^51;
+for(var i=0;i<h.length;i++)h[i]=(h[i]-7)&255;
+for(var i=0;i<h.length;i++)h[i]=h[i]^90;
+return String.fromCharCode.apply(null,h);
 }
 var _0xE=_0xD(_0xA);
-document.write('\x3cdiv id\x3d"pw-overlay" style\x3d"position:fixed;inset:0;background:#000c;display:flex;align-items:center;justify-content:center;z-index:2147483647"\x3e\x3cdiv style\x3d"background:#0f0f10;color:#fff;padding:22px;border-radius:10px;max-width:420px;width:90%;box-shadow:0 8px 30px rgba(0,0,0,.6);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;text-align:center"\x3e\x3ch2 style\x3d"margin:0 0 10px;font-size:18px"\x3eEnter password\x3c/h2\x3e\x3cinput id\x3d"pw-input" type\x3d"password" style\x3d"width:100%;padding:10px"\x3e\x3cdiv style\x3d"margin-top:12px;display:flex;gap:10px;justify-content:center"\x3e\x3cbutton id\x3d"pw-submit"\x3eEnter\x3c/button\x3e\x3cbutton id\x3d"pw-cancel"\x3eCancel\x3c/button\x3e\x3c/div\x3e\x3c/div\x3e\x3c/div\x3e');
+document.write('<div id="pw-overlay" style="position:fixed;inset:0;background:#000c;display:flex;align-items:center;justify-content:center;z-index:2147483647"><div style="background:#0f0f10;color:#fff;padding:22px;border-radius:10px;width:90%;max-width:420px;text-align:center"><h2>Enter password</h2><input id="pw-input" type="password" style="width:100%;padding:10px"><div style="margin-top:12px"><button id="pw-submit">Enter</button><button id="pw-cancel">Cancel</button></div></div></div>');
 })();
 </script>
 
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+<link rel="icon" href="/favicon.png">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Xen0nkidd</title>
 <link rel="stylesheet" href="style.css">
 <script src="mouse-lock.js"></script>
+</head>
+
+<body class="dark-mode">
+
+<header>
+  <div class="header-content">
+    <div class="logo">Xen0nkidd</div>
+    <div class="search-container">
+      <input type="text" id="searchBar" placeholder="Search zones..." oninput="filterZones()">
+      <select id="sortOptions" onchange="sortZones()">
+        <option value="name">Name</option>
+        <option value="id">ID</option>
+        <option value="popular">Popular</option>
+      </select>
+      <select onchange="if(this.value)location.href=this.value;">
+        <option value="">Quick Links</option>
+        <option value="https://xen0nkidd.github.io/jjk.html">JJK Episodes</option>
+        <option value="https://xen0nkidd.github.io/ai.html">ChatGPT</option>
+      </select>
+    </div>
+  </div>
+</header>
+
+<main>
+  <br><hr><br>
+  <details open>
+    <summary style="font-size:1.2rem;font-weight:bold;">All Zones</summary>
+    <div id="container">Loading...</div>
+  </details>
+</main>
+
+<script src="script.js"></script>
 </head>
 
 <body class="dark-mode">
@@ -203,6 +236,7 @@ document.write('\x3cdiv id\x3d"pw-overlay" style\x3d"position:fixed;inset:0;back
 </script>
 </body>
 </html>
+
 
 
 
