--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ document.write('<div id="pw-overlay" style="position:fixed;inset:0;background:#0
 <title>Xen0nkidd</title>
 <link rel="stylesheet" href="style.css">
 <script src="mouse-lock.js"></script>
-</head>
+<head>
 
 <body class="dark-mode">
 
@@ -236,6 +236,7 @@ document.write('<div id="pw-overlay" style="position:fixed;inset:0;background:#0
 </script>
 </body>
 </html>
+
 
 
 
