--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ document.write('<div id="pw-overlay" style="position:fixed;inset:0;background:#0
 </main>
 
 <script src="script.js"></script>
-</head>
+</body>
 
 <body class="dark-mode">
 <!-- rest of your page unchanged -->
@@ -236,6 +236,7 @@ document.write('<div id="pw-overlay" style="position:fixed;inset:0;background:#0
 </script>
 </body>
 </html>
+
 
 
 
