--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   </main>
 
   <script src="script.js"></script>
-
+<script src="music.js"></script>
     <script>
         const search = new URLSearchParams(window.location.search);
     </script>
@@ -129,6 +129,7 @@
 </script>
 </body>
 </html>
+
 
 
 
