--- a/singlefile.html
+++ b/singlefile.html
@@ -839,8 +839,9 @@ footer {
    <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
    </script>
-
+<script src="music.js"></script>
     <script>
+        
         const container = document.getElementById('container');
 const zoneViewer = document.getElementById('zoneViewer');
 let zoneFrame = document.getElementById('zoneFrame');
