--- a/test.html
+++ b/test.html
@@ -824,7 +824,7 @@ footer {
    <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
    </script>
-
+<script src="music.js"></script>
     <script>
         const container = document.getElementById('container');
 const zoneViewer = document.getElementById('zoneViewer');
