--- a/JjkEps/Ep4.html
+++ b/JjkEps/Ep4.html
@@ -1,34 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Episode 4</title>
-<style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    overflow: hidden;
-  }
-  iframe {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
-  }
-</style>
+  <meta charset="UTF-8">
+  <title>Video Player</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      background: black;
+      overflow: hidden;
+    }
+
+    #player {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      background: black;
+    }
+  </style>
 </head>
 <body>
 
-<iframe
-  src="mega file for ep4 when downloadable"
-  allow="autoplay; fullscreen"
-  allowfullscreen
-></iframe>
+  <div id="player">
+    <video
+      controls
+      preload="metadata"
+      playsinline
+      webkit-playsinline
+      allowfullscreen
+    >
+      <source
+        src="https://s3.animotvslash.nl/animotvslash/%5Banimotvslash.org%5D%20%5Bsubsplease%5D%20jujutsu%20kaisen%20-%2051%20%281080p%29%20%5B84c776b4%5D.mp4"
+        type="video/mp4"
+      >
+      Your browser does not support the video tag.
+    </video>
+  </div>
 
 </body>
 </html>
