--- a/jjk.html
+++ b/jjk.html
@@ -51,7 +51,7 @@
 <button onclick="go('https://xen0nkidd.github.io/JjkEps/Ep3.html')">
   Episode 3
 </button>
-    <button onclick="go('https://xen0nkidd.github.io/notRelasedYet.html')">
+    <button onclick="go('https://xen0nkidd.github.io/JjkEps/Ep4.html')">
       Episode 4
     </button>
     <!-- Add more buttons like this -->
