--- a/singlefile.html
+++ b/singlefile.html
@@ -779,26 +779,28 @@ footer {
     </script>
 
 
-    <ins class="adsbygoogle"
-    style="display:block; text-align:center;"
-    data-ad-client="ca-pub-5521219086088837"
-    data-ad-slot="5549138288"
-    data-ad-format="auto"
-    data-full-width-responsive="true"></ins>
-   <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-   </script>
+    
 
     <main>
         <!-- <details id="featuredZonesWrapper" open>
             <summary id="allZonesSummary" style="font-size: 1.2rem; font-weight: bold; cursor: pointer;">Featured Zones</summary>
             <div id="featuredZones" class="zone-container"></div>
         </details> -->
-        <br><hr><br>
+        <hr>
         <details id="allZonesWrapper" open>
             <summary id="allSummary" style="font-size: 1.2rem; font-weight: bold; cursor: pointer;">All Zones</summary>
             <div id="container">Loading...</div>
         </details>
+            
+
+<ins class="adsbygoogle"
+  style="display:block; text-align:center;"
+  data-ad-client="ca-pub-5521219086088837"
+  data-ad-slot="5549138288"
+  data-ad-format="auto"
+  data-full-width-responsive="true"></ins>
+<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+
     </main>
 
     <div id="zoneViewer">
