--- a/jjk.html
+++ b/jjk.html
@@ -38,7 +38,7 @@
 <div class="modal">
   <div class="modal-content">
     <h2>Select JJK Season 3 Episode 
-      (Adless & New Episodes Will Be Added Apon Release)
+      (Adless & New Episodes Will Be Added Apon Release Hopefully)
     </h2>
 
     <button onclick="go('https://xen0nkidd.github.io/JjkEps/Ep1.html')">
