--- a/jjk.html
+++ b/jjk.html
@@ -54,6 +54,9 @@
     <button onclick="go('https://xen0nkidd.github.io/JjkEps/Ep4.html')">
       Episode 4
     </button>
+    <button onclick="go('https://xen0nkidd.github.io/JjkEps/Ep5.html')">
+      Episode 5
+    </button>
     <!-- Add more buttons like this -->
     <!--
     <button onclick="go('https://example.com')">
