--- a/jjk.html
+++ b/jjk.html
@@ -54,8 +54,12 @@
     <button onclick="go('https://xen0nkidd.github.io/JjkEps/Ep4.html')">
       Episode 4
     </button>
-    <button onclick="go('https://xen0nkidd.github.io/JjkEps/Ep5.html')">
+    
+ <button onclick="go('https://xen0nkidd.github.io/JjkEps/Ep5.html')">
       Episode 5
+    </button>
+   <button onclick="go('https://xen0nkidd.github.io/JjkEps/Ep6.html')">
+      Episode 6
     </button>
     <!-- Add more buttons like this -->
     <!--
