--- a/JjkSchoolVarient.html
+++ b/JjkSchoolVarient.html
@@ -57,6 +57,9 @@
     <button onclick="go('https://xen0nkidd.github.io/JjkEpsSchool/Ep5.html')">
   Episode 5
 </button>
+    <button onclick="go('https://xen0nkidd.github.io/JjkEpsSchool/Ep6.html')">
+  Episode 6
+</button>
     <!-- Add more buttons like this -->
     <!--
     <button onclick="go('https://example.com')">
