--- a/JjkEps/Ep6.html
+++ b/JjkEps/Ep6.html
@@ -25,7 +25,7 @@
 <body>
 
 <iframe
-  src="https://mega.nz/embed/mFNGiBoL#5tVxNwFTL1FSUBMgO8yP_zfesYSc5UG6EFk80bSrB8U"
+  src="https://mega.nz/embed/KckjWRIJ#7R-XaVt4arSzJ0ab4NtTwPtf6yYOF27q8odrW5agaYU"
   allow="autoplay; fullscreen"
   allowfullscreen
 ></iframe>
